Make sure cells do not collapse when they do not have containers [fixes #90709846]

--- a/app/stylesheets/_cell.scss
+++ b/app/stylesheets/_cell.scss
@@ -6,4 +6,5 @@
   padding: 0;
   background-color: $glow-1;
   margin-top: 8px;
+  height: $app-container-size;
 }
