--- a/app/stylesheets/_containers.scss
+++ b/app/stylesheets/_containers.scss
@@ -11,7 +11,7 @@ $app-container-gutter-right: inset -2px 0 0 $neutral-2;
 .app-container {
   box-sizing: content-box;
   display: block;
-  height: $app-container-size;
+  height: 100%;
   width: $app-container-size;
   margin: 0;
   transition-timing-function: ease-out;
